@@ -1,6 +1,8 @@
 2022-03-07
 
-  * Fix errors (missing entities) on scenarios/Asian Campaign
+  * Fix errors (missing entities) on scenarios/Asian Campaign *
+  * Replace scenarios/Asian Campaign with slightly newer version by
+  original author
 
 2022-03-05
 
